@@ -27,6 +27,10 @@ IRT <- navbarMenu("IRT models",
                            p('Estimates of parameters are completed by SX2 item fit statistics (Ames & Penfield, 2015).
                              SX2 is computed only when no missing data are present. In such a case consider using imputed dataset!'),
                            tableOutput('raschcoef_mirt'),
+                           br(),
+                           downloadButton( outputId = "download_Rasch_table",
+                                           label    = "Download table"),
+                           br(),
                            h4('Scatter plot of factor scores and standardized total scores'),
                            textOutput('raschFactorCor_mirt'),
                            plotOutput('raschFactor_mirt'),
@@ -68,6 +72,10 @@ IRT <- navbarMenu("IRT models",
                              (Ames & Penfield, 2015). SX2 is computed only when no missing data are present.
                              In such a case consider using imputed dataset!'),
                            tableOutput('oneparamirtcoef_mirt'),
+                           br(),
+                           downloadButton(outputId = "download_1pl_table",
+                                          label    = "Download table"),
+                           br(),
                            h4('Scatter plot of factor scores and standardized total scores'),
                            textOutput('oneparamirtFactorCor_mirt'),
                            plotOutput('oneparamirtFactor_mirt'),
@@ -108,6 +116,10 @@ IRT <- navbarMenu("IRT models",
                            p('Estimates of parameters are completed by SX2 item fit statistics (Ames & Penfield, 2015).
                              SX2 is computed only when no missing data are present. In such a case consider using imputed dataset!'),
                            tableOutput('twoparamirtcoef_mirt'),
+                           br(),
+                           downloadButton(outputId = "download_2pl_table",
+                                          label    = "Download table"),
+                           br(),
                            h4('Scatter plot of factor scores and standardized total scores'),
                            textOutput('twoparamirtFactorCor_mirt'),
                            plotOutput('twoparamirtFactor_mirt'),
@@ -234,6 +246,10 @@ IRT <- navbarMenu("IRT models",
                            p('Estimates of parameters are completed by SX2 item fit statistics (Ames & Penfield, 2015).
                              SX2 is computed only when no missing data are present. In such a case consider using imputed dataset!'),
                            tableOutput('threeparamirtcoef_mirt'),
+                           br(),
+                           downloadButton(outputId = "download_3pl_table",
+                                          label    = "Download table"),
+                           br(),
                            h4('Scatter plot of factor scores and standardized total scores'),
                            textOutput('threeparamirtFactorCor_mirt'),
                            plotOutput('threeparamirtFactor_mirt'),
@@ -359,6 +375,10 @@ IRT <- navbarMenu("IRT models",
                            p('Estimates of parameters are completed by SX2 item fit statistics (Ames & Penfield, 2015).
                              SX2 is computed only when no missing data are present. In such a case consider using imputed dataset!'),
                            tableOutput('irt_4PL_coef'),
+                           br(),
+                           downloadButton(outputId = "download_4pl_table",
+                                          label    = "Download table"),
+                           br(),
                            h4('Scatter plot of factor scores and standardized total scores'),
                            textOutput('irt_4PL_factorscores_correlation'),
                            plotOutput('irt_4PL_factorscores_plot'),
