@@ -21,6 +21,9 @@ MAJOR UPDATES
   o Validity/Correlation structure now allows selection between
     Pearson/Spearman/Polychoric correlation, Polychoric is default
     for binary data
+  o Download of tables (as .csv files) is now provided for
+    standard scores, correlation matrix, traditional item analysis,
+    and for parameter estimates in IRT models.
 
 MINOR UPDATES
   o Data upload now better points to "Upload data" button.
